--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="secondsection">
-        <h1 class="content-title">Some random information</h1>
+        <h1 class="content-title">Some random information.</h1>
         <div class="container">
             <div class="image-subtext">
                 <img src="" alt="">
@@ -57,7 +57,7 @@
 
     <div class="fourthsection">
         <div class="box">
-            <div class="left-calltoaction">
+            <div class="calltoaction">
                 <p class="calltoaction-title">Call to action! It's time!</p>
                 <p class="calltoaction-subtext">Sign up for our product by clicking that button right over there!</p>
             </div>
